<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:visibility="visible"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="210dp">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/faustina"
        android:text="@string/logo_text"
        android:textColor="@color/colorAzulBrillante"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageidregisterr"
        android:layout_width="140dp"
        android:layout_height="93dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppName"
        app:srcCompat="@drawable/card_id_identification_identity_profile_icon"
        android:contentDescription="@string/add_new_profes_image_description" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/faustina"
        android:text="@string/register"
        android:textColor="@color/colorBotonSecundario"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageidregisterr" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:autofillHints="PersonalName"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonSur"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="300dp"
        android:autofillHints="PersonalSurname"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonEmail"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="348dp"
        android:autofillHints="PersonalEmail"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="392dp"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/register_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="noExcludeDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="440dp"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/repeat_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="noExcludeDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="544dp"
        android:elevation="16dp"
        android:fontFamily="@font/faustina"
        android:text="@string/btn_enter"
        android:textColor="@color/colorLetraInterna"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="buttonEnter"/>


    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:fontFamily="@font/faustina"
        android:onClick="btn_help"
        android:text="@string/help"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
