<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:visibility="visible"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/faustina"
        android:text="@string/logo_text"
        android:textColor="@color/colorAzulBrillante"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagesingin"
        android:layout_width="140dp"
        android:layout_height="79dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppName"
        app:srcCompat="@drawable/id_identification_identity_profile_icon"
        android:contentDescription="@string/chek_img" />

    <TextView
        android:id="@+id/textLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/faustina"
        android:text="@string/text_login"
        android:textColor="@color/colorBotonSecundario"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription"
        app:layout_constraintTop_toBottomOf="@+id/imagesingin" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="211dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/faustina"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />



    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:fontFamily="@font/faustina"
        android:hint="@string/name_or_email"
        android:inputType="textPersonName|textEmailAddress"
        android:importantForAutofill="noExcludeDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="noExcludeDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/buttonToSignIn"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginTop="536dp"
        android:elevation="16dp"
        android:fontFamily="@font/faustina"
        android:onClick="btn_signin"
        android:text="@string/btn_signin"
        android:textColor="@color/colorLetraInterna"
        android:textSize="20sp"
        android:visibility="visible"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:fontFamily="@font/faustina"
        android:onClick="btn_help"
        android:text="@string/help"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
